# setup-note

./: .textlintrc  404.html  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml
atcoder/: index.html
docs/: atcoder.md  git.md  homebrew.md  node.md  powershell.md  python.md
git/: index.html
homebrew/: index.html
node/: index.html
powershell/: index.html
python/: index.html
search/: search_index.json
